app/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashicorp-demo
  labels:
    app: hashicorp-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashicorp-demo
  template:
    metadata:
      labels:
        app: hashicorp-demo
    spec:
      containers:
      - name: server
        image: abelgana/go_server_image:${TAG}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hashicorp-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hashicorp-demo
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hashicorp-demo
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: hashicorp-demo.${CLUSTER_SPECIFIC_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: hashicorp-demo
          servicePort: 80
        path: /
